monitoring/influxdb/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7.11-alpine
          ports:
            - containerPort: 8086
              name: http
          volumeMounts:
            - mountPath: /etc/influxdb2
              name: influxdb-config
            - mountPath: /var/lib/influxdb2
              name: influxdb-data
      volumes:
        - name: influxdb-config
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/monitoring/influxdb/config
        - name: influxdb-data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/monitoring/influxdb/data
  volumeClaimTemplates: []
