monitoring/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
