monitoring/influxdb/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - influxdb.lan
      secretName: influxdb-tls
  rules:
    - host: influxdb.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  name: http
